--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,6 +57,11 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
     text-align: center;
     display: none;
 }
+
+.about .container p{
+    padding-top: 50px;
+    text-align: left;
+}
 /*SOBRE*/
 
 /*PORTFOLIO*/
@@ -87,6 +92,35 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
     height: 200px;
     background: #fff url(../imgs/headerbg.jpg) center no-repeat;
     background-attachment: fixed;
+    color: #fff;
+}
+.footer .container{
+    text-align: center;
+}
+
+.footer .container .footercontact{
+    display:  inline-block;
+    text-align: center;
+    margin-top: 60px;
+}
+.footer .container .footercontact span{
+    display: inline-block;
+}
+.footer .container .footercontact ul{
+    padding-left: 0;
+}
+.footer .container .footercontact li{
+    display: inline-block;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+.footer .container .footercontact li a{
+    text-decoration: none;
+    transition: color 0.5s ease;
+    color: #D52664;
+    font-size: 25px;
+}
+.footer .container .footercontact li a:hover{
     color: #fff;
 }
 /*RODAPE*/
@@ -128,6 +162,9 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 .clearfix { display: block; }
 /* close commented backslash hack */
 /*clearfix*/
+
+
+
 /*Navbar*/
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(119, 119, 119, 1);
@@ -178,14 +215,39 @@ body{font-family: 'Open sans', sans-serif; padding-top: 50px; padding-bottom: 5p
 /*Navbar*/
 
 /*Progress bar*/
-.progress {position: fixed; right: 0;left: 0; bottom: 0; padding-right: 0; padding-left: 0;background: rgba(255, 255, 255, 0); border: 0px solid rgba(255, 255, 255, 1); border-radius: 0px; height: 5px;}
-.progress {margin-bottom: 0; }
-.progress-bar-custom {background: rgba(255, 255, 255, 1);}
+.progress {
+    position: fixed; 
+    right: 0;
+    left: 0; 
+    bottom: 0; 
+    padding-right: 0; 
+    padding-left: 0;
+    background: rgba(255, 255, 255, 0); 
+    border: 0px solid rgba(255, 255, 255, 1);
+    border-radius: 0px; 
+    height: 5px;}
+.progress {
+    margin-bottom: 0; 
+}
+.progress-bar-custom {
+    background: rgba(255, 255, 255, 1);
+}
 /*Progress bar*/
 
-.main{margin-top: 200px; position: fixed;}
-
-
+/*SOBRESITE*/
+.sobresite{
+    height: 400px; 
+    background: black; 
+    color: #fff; 
+    text-align: center;
+    position: fixed;
+    width: auto;
+    bottom: 100px;
+    left: 100px;
+    border: solid;
+    display: none;
+}
+/*SOBRESITE*/
 
 
 
